# filizer

./: .gitignore  .releaserc.json  CHANGELOG.md  RALPH_TASK.md  README.md  config.py  file_sync.py  files.json  main.py  pyproject.toml  test_file_sync.py  verify_auth.py
.github/workflows/: build.yaml  release.yaml  server.yaml
.ralph/: guardrails.md  progress.md
charts/filizer-server/: Chart.yaml  requirements.yaml  values.yaml
charts/filizer-server/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
client/: GEMINI.md  file_sync.py  test_file_sync.py
common/: models.py
server/: Dockerfile  README.md  config.py  main.py  pyproject.toml  verify_config.py
server/templates/: index.html
server/tests/: test_api.py
templates/: index.html
tests/: test_api.py
