[project]
name = "filizer-monorepo"
version = "0.1.0"
description = "Filizer monorepo containing client and server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.5",
    "pymongo[srv]>=4.15.5",
    "pyodmongo>=1.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["server/tests", "client/test_file_sync.py"]
pythonpath = ["server", "client", "."]
