[project]
name = "filizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic[email]>=2.12.5",
    "pymongo[srv]>=4.15.5",
    "pyodmongo>=1.7.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
